최초업로드

--- a/index.html
+++ b/index.html
@@ -746,15 +746,15 @@
           <ul class="work-list">
               <li>
                   <p class="frame">
-                      <a href="./works/game/index.html" target="_blank">
-                          <img src="./images/portfolio/game-01.png" alt="#">
+                      <a href="https://ohtmm.github.io/game-prevent_covid19/" target="_blank">
+                          <img src="./images/portfolio/game.png" alt="#">
                       </a>
                   </p>
               </li>
               <li>
                   <p class="frame">
-                      <a href="./works/game/index.html" target="_blank">
-                          <img src="./images/portfolio/game-02.png" alt="#">
+                      <a href="./works/myrealtrip/index.html" target="_blank">
+                          <img src="./images/portfolio/myrealtrip.png" alt="#">
                       </a>
                   </p>
 
