최초업로드

--- a/index.html
+++ b/index.html
@@ -418,10 +418,10 @@
                   </p>
                   <div class="container">
                       <a href="./images/portfolio/covid.pdf" target="_blank" class="btnShow2">작업과정 보기</a>
-                      <a href="https://ohtmm.github.io/game-prevent_covid19/" target="_blank" class="btnShow2">사이트 보기</a>
+                      <a href="https://enjkm620.github.io/prevent-covid19/" target="_blank" class="btnShow2">사이트 보기</a>
                   </div>
                   <p class="frame">
-                      <a href="https://ohtmm.github.io/game-prevent_covid19/" target="_blank">
+                      <a href="https://enjkm620.github.io/prevent-covid19/" target="_blank">
                           <img src="./images/portfolio/game-process.png" alt="#">
                       </a>
                   </p>
