--- a/index.html
+++ b/index.html
@@ -484,40 +484,48 @@
           <div class="work-design">
               <ul class="slides">
                 <li>
-                    <a rel="noopener noreferrer" href="./images/portfolio/design01.pdf" target="_blank">
-                        <h4>Color of the Year</h4>
-                        <span class="view">view</span>
-                    </a>
+                    <div class="tit">
+                        <a rel="noopener noreferrer" href="./images/portfolio/design01.pdf" target="_blank">
+                            <h4>Color of the Year</h4>
+                            <span class="view">view</span>
+                        </a>
+                    </div>
                     <p>
                         <span class="desc">Research & Design <span class="tip">| 개인 작업</span></span>
                         팬톤 올해의 컬러에 담긴 의미와 역대 올해의 컬러를 소개합니다.
                     </p>
                 </li>
                 <li>
-                    <a rel="noopener noreferrer" href="./images/portfolio/design02.pdf" target="_blank">
-                        <h4>Over The Top</h4>
-                        <span class="view">view</span>
-                    </a>
+                    <div class="tit">
+                        <a rel="noopener noreferrer" href="./images/portfolio/design02.pdf" target="_blank">
+                            <h4>Over The Top</h4>
+                            <span class="view">view</span>
+                        </a>
+                    </div>
                     <p>
                         <span class="desc">Research & UX Design <span class="tip">| 팀 프로젝트 (Tving/디자인 담당)</span></span>
                         OTT 서비스가 트렌드가 된 이유와 경쟁사 별 페르소나를 분석했습니다.
                     </p>
                 </li>
                 <li>
-                    <a rel="noopener noreferrer" href="./images/portfolio/design03.pdf" target="_blank">
-                        <h4>Climate Disaster</h4>
-                        <span class="view">view</span>
-                    </a>
+                    <div class="tit">
+                        <a rel="noopener noreferrer" href="./images/portfolio/design03.pdf" target="_blank">
+                            <h4>Climate Disaster</h4>
+                            <span class="view">view</span>
+                        </a>
+                    </div>
                     <p>
                         <span class="desc">Infographic Poster Design <span class="tip">| 개인 작업</span></span>
                         기후위기 경각심을 일깨우고 실천방안을 홍보하는 인포그래픽 포스터입니다.
                     </p>
                 </li>
                 <li>
-                    <a rel="noopener noreferrer" href="./images/portfolio/design04.pdf" target="_blank">
-                        <h4>이달의 클래스</h4>
-                        <span class="view">view</span>
-                    </a>
+                    <div class="tit">
+                        <a rel="noopener noreferrer" href="./images/portfolio/design04.pdf" target="_blank">
+                            <h4>이달의 클래스</h4>
+                            <span class="view">view</span>
+                        </a>
+                    </div>
                     <p>
                         <span class="desc">One Day Class Promotion Design <span class="tip">| 개인 작업</span></span>
                         원데이 클래스 포스터와 SNS 업로드용 이미지를 디자인했습니다.
@@ -572,9 +580,6 @@
     <aside>
       <a rel="noopener noreferrer" href="#"><i class="fas fa-angle-up"></i></a>
     </aside>
-<!-- 	
-	<aside><div class="addthis_inline_share_toolbox"></div></aside>
-	<script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-630ebc7e6bbac8f6"></script>	 -->
   </div>
 </body>
 </html>
