--- a/works/pofol04/index.html
+++ b/works/pofol04/index.html
@@ -111,8 +111,8 @@
                                     <img src="./images/hand-care.png" alt="handcare">
                                     <span class="product-name">2022 홀리데이 리미티드 틴케이스 핸드크림 트리오</span>
                                     <span class="price">₩ 42,000</span>
-                                    <button>장바구니 담기</button>
                                 </a>
+                                <button>장바구니 담기</button>
                             </li>
                         </ul>
                     </li>
@@ -137,8 +137,8 @@
                                     <img src="./images/body-care.png" alt="bodycare">
                                     <span class="product-name">[공식몰 단독] 2022 홀리데이 시어 골든 라떼 바디 듀오</span>
                                     <span class="price">₩ 71,000</span>
-                                    <button>장바구니 담기</button>
                                 </a>
+                                <button>장바구니 담기</button>
                             </li>
                         </ul>
                     </li>
@@ -186,8 +186,8 @@
                                     <img src="./images/skin-care.png" alt="skincare">
                                     <span class="product-name">[기프트/단독] 탄력관리 리셋 세럼 & 홈스파 마사지 바 세트</span>
                                     <span class="price">₩ 87,000</span>
-                                    <button>장바구니 담기</button>
                                 </a>
+                                <button>장바구니 담기</button>
                             </li>
                         </ul>
                     </li>
@@ -219,8 +219,8 @@
                                     <img src="./images/hair-care.png" alt="haircare">
                                     <span class="product-name">리페어 헤어 마스크 세트 (정품 브러쉬 증정)</span>
                                     <span class="price">₩ 42,000</span>
-                                    <button>장바구니 담기</button>
                                 </a>
+                                <button>장바구니 담기</button>
                             </li>
                         </ul>
                     </li>
@@ -243,8 +243,8 @@
                                     <img src="./images/mens-care.png" alt="menscare">
                                     <span class="product-name">[기프트/단독] 2 in 1 멀티 맨 샤워 세트</span>
                                     <span class="price">₩ 71,000</span>
-                                    <button>장바구니 담기</button>
                                 </a>
+                                <button>장바구니 담기</button>
                             </li>
                         </ul>
                     </li>
@@ -280,8 +280,8 @@
                                     <img src="./images/fragrances.png" alt="fragrances">
                                     <span class="product-name">[기프트/단독] 2022 홀리데이 #꿀잠 필로우미스트 세트</span>
                                     <span class="price">₩ 30,000</span>
-                                    <button>장바구니 담기</button>
                                 </a>
+                                <button>장바구니 담기</button>
                             </li>
                         </ul>
                     </li>
@@ -372,64 +372,64 @@
                             <p class="frame"></p>
                             <p class="tit">[기프트/단독] 2022 홀리데이 #꿀잠 필로우미스트 세트</p>
                             <p class="price">₩ 30,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#">
                             <p class="frame"></p>
                             <p class="tit">2022 홀리데이 리미티드 클래식 핸드 & 스틱 립 듀오</p>
                             <p class="price">₩ 29,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#">
                             <p class="frame"></p>
                             <p class="tit">2022 홀리데이 프리미엄 핸드 듀오_그린 체스트넛</p>
                             <p class="price">₩ 76,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#">
                             <p class="frame"></p>
                             <p class="tit">2022 홀리데이 리미티드 틴케이스 핸드크림 트리오</p>
                             <p class="price">₩ 42,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#">
                             <p class="frame"></p>
                             <p class="tit">2022 홀리데이 프리미엄 캘린더</p>
                             <p class="price">₩ 160,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#">
                             <p class="frame"></p>
                             <p class="tit">2022 홀리데이 시어 & 그린 체스트넛 핸드 듀오</p>
                             <p class="price">₩ 30,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#">
                             <p class="frame"></p>
                             <p class="tit">2022 홀리데이 그린 체스트넛 핸드 & 립 듀오</p>
                             <p class="price">₩ 29,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                     <li>
                         <a rel="noopener noreferrer" href="#">
                             <p class="frame"></p>
                             <p class="tit">[공식몰 단독] 2022 홀리데이 그린 체스트넛 스크럽 & 리치 보습 듀오</p>
                             <p class="price">₩ 96,000</p>
-                            <button>장바구니 담기</button>
                         </a>
+                        <button>장바구니 담기</button>
                     </li>
                 </ul>
             </div>
@@ -444,19 +444,21 @@
                     <a rel="noopener noreferrer" href="#">
                         <p class="frame"></p>
                         <h3>그린 체스트넛</h3>
-                        <p class="desc">#시어그린체스트넛 #포근한 우디 <br/>
-                            추운 겨울에 숲속을 산책하며 느끼는 싱그럽고 포근한 우디향</p>
-                        <button>컬렉션 자세히 보기</button>
+                        <p class="desc">#시어그린체스트넛 #포근한 우디 <br>
+                            추운 겨울에 숲속을 산책하며 느끼는 싱그럽고 포근한 우디향
+                        </p>
                     </a>
+                    <button>컬렉션 자세히 보기</button>
                 </li>
                 <li>
                     <a rel="noopener noreferrer" href="#">
                         <p class="frame"></p>
                         <h3>시어 골든 라떼</h3>
-                        <p class="desc">#시어골든라떼 #스파이시크리미 <br/>
-                            오렌지를 한 방울 떨어뜨린 시원한 향신료에 겨울을 머금은 크리미한 골든 라떼향</p>
-                        <button>컬렉션 자세히 보기</button>
+                        <p class="desc">#시어골든라떼 #스파이시크리미 <br>
+                            오렌지를 한 방울 떨어뜨린 시원한 향신료에 겨울을 머금은 크리미한 골든 라떼향
+                        </p>
                     </a>
+                    <button>컬렉션 자세히 보기</button>
                 </li>
             </ul>
         </section>
@@ -479,8 +481,8 @@
                                     <span>프로방스의 사계절 안의</span>
                                     <span>24가지 서프라이즈를 만나보세요!</span>
                                 </p>
-                                <button>장바구니 담기</button>
                             </a>
+                            <button>장바구니 담기</button>
                         </div>
                     </li>
                     <li>
@@ -497,8 +499,8 @@
                                     <span>4개의 정품이 들어있는 24가지</span>
                                     <span>서프라이즈를 만나보세요!</span>
                                 </p>
-                                <button>장바구니 담기</button>
                             </a>
+                            <button>장바구니 담기</button>
                         </div>
                     </li>
                     <li>
@@ -515,8 +517,8 @@
                                     <span>7일 동안 7가지</span>
                                     <span>미니 록시땅을 만나보세요!</span>
                                 </p>
-                                <button>장바구니 담기</button>
                             </a>
+                            <button>장바구니 담기</button>
                         </div>
                     </li>
                 </ul>
@@ -543,8 +545,8 @@
                             공식몰 신규 가입 후 첫 구매하시는 모든 분들께 
                             <span><strong>라벤더 핸드 크림 10ml 과 버베나 샤워 젤 30ml</strong>을 드립니다.</span>
                         </p>
-                        <button>쇼핑하기</button>
                     </a>
+                    <button>쇼핑하기</button>
                 </li>
                 <li>
                     <a rel="noopener noreferrer" href="#">
@@ -554,8 +556,8 @@
                             록시땅 공식몰만의 <strong>특별한 구매 금액대별 사은품</strong>을
                             <span>지금 바로 만나보세요.</span>
                         </p>
-                        <button>자세히 보기</button>
                     </a>
+                    <button>자세히 보기</button>
                 </li>
                 <li>
                     <a rel="noopener noreferrer" href="#">
@@ -565,8 +567,8 @@
                             우수한 리뷰를 남겨주신 5분을 선정하여
                             <span><strong>시어 울트라 리치 핸드 앤 바디 워시 500ml</strong>을 드립니다.</span>
                         </p>
-                        <button>자세히 보기</button>
                     </a>
+                    <button>자세히 보기</button>
                 </li>
             </ul>
         </section>
@@ -579,15 +581,15 @@
                     <h3>가까운 록시땅 매장을 찾아보세요</h3>
                     <p class="desc">가까운 록시땅 매장에서 프로방스의 아름다움을 경험해보세요.</p>
                     <form action="#">
-                        <input type="text" id="search" placeholder="매장명을 입력하세요" autocomplete="off">
-                        <label for="search">가까운 매장 찾기</label>
+                        <input type="text" id="location" placeholder="매장명을 입력하세요" autocomplete="off">
+                        <label for="location">가까운 매장 찾기</label>
                     </form>
                 </div>
             </div>
         </section>
 
         <footer>
-            <article class="info-1">
+            <div class="info-1">
                 <ul>
                     <li>
                         <p class="tit">INIPAY 에스크로 가입 확인</p>
@@ -595,7 +597,7 @@
                             록시땅 공식몰(kr.loccitane.com)은 귀하의 결제 정보 보안을 최상의 상태로 유지하기 위하여, 결제 시, (주)이니시스의 결제대금 예치서비스인 에스크로 서비스를 제공하고 있습니다.
 
                             <span>
-                                결제대금예치업 등록번호 : 02-006-00013 <br />
+                                결제대금예치업 등록번호 : 02-006-00013 <br>
                                 통신판매번호 : 2008-서울강남-0844
                             </span>
                         </p>
@@ -609,17 +611,17 @@
                     <li>
                         <p class="tit">고객 문의</p>
                         <p class="desc">
-                            록시땅 대표전화 : (02) 2054-0500 <br />
-                            록시땅 대표메일 :loccitane@loccitane.co.kr <br />
-                            록시땅 플러스친구: @록시땅 <br />
-                            *업무 시간: 평일 오전 10시~오후 5시, 공휴일 제외 <br />
-                            결제 문의 : 1588-4954 <br />
+                            록시땅 대표전화 : (02) 2054-0500 <br>
+                            록시땅 대표메일 :loccitane@loccitane.co.kr <br>
+                            록시땅 플러스친구: @록시땅 <br>
+                            *업무 시간: 평일 오전 10시~오후 5시, 공휴일 제외 <br>
+                            결제 문의 : 1588-4954 <br>
                         </p>
                     </li>
                 </ul>
-            </article>
+            </div>
             
-            <article class="info-2">
+            <div class="info-2">
                 <ul class="footer-mnu">
                     <li>
                         <div class="container">
@@ -679,9 +681,9 @@
                         </ol>
                     </li>
                 </ul>
-            </article>
+            </div>
 
-            <article class="info-3">
+            <div class="info-3">
                 <ul>
                     <li><a rel="noopener noreferrer" href="#">매장찾기</a></li>
                     <li><a rel="noopener noreferrer" href="#">이용약관</a></li>
@@ -689,13 +691,13 @@
                     <li><a rel="noopener noreferrer" href="#">INTERNATIONAL L'OCCITANE</a></li>
                     <li><a rel="noopener noreferrer" href="#">에스크로 가입 확인</a></li>
                 </ul>
-            </article>
+            </div>
 
-            <article class="info-4">
+            <div class="info-4">
                 <p class="logo">LOCCITANE</p>
                 <address>
                     <span class="infomation">
-                        상호: 록시땅코리아 유한책임회사 | 사업자 등록 번호 211-87-74234 | 대표자 : 안드레조셉호프만 | 주소 : 서울특별시 강남구 테헤란로 87길 36(삼성동) 도심공항타워 21층(06164) <br />
+                        상호: 록시땅코리아 유한책임회사 | 사업자 등록 번호 211-87-74234 | 대표자 : 안드레조셉호프만 | 주소 : 서울특별시 강남구 테헤란로 87길 36(삼성동) 도심공항타워 21층(06164) <br>
                         | 대표전화 : (02)2054-0500 | 대표메일 : LOCCITANE@LOCCITANE.CO.KR | 결제관련문의 : 1588-4954 | 주문관련문의 : (02)2054-0500 | 통신판매번호 : 2008-서울강남-0844 |
                     </span>
                 </address>
@@ -704,7 +706,7 @@
                         L’OCCITANE EN PROVENCE © COPYRIGHT 2022
                     </span>
                 </address>
-            </article>
+            </div>
         </footer>
     </div>
 </body>
