최초업로드

--- a/works/pofol01/index.html
+++ b/works/pofol01/index.html
@@ -33,7 +33,7 @@
             </div>
         </header>
 
-        <hr />
+        <hr>
 
         <section class="visual">
             <h2 class="sr-only">생과방 미리보기</h2>
@@ -64,7 +64,7 @@
                 <div class="container">
                     <h3><span>2022</span> 경복궁 생과방</h3>
                     <p>
-                        경복궁 소주방 전각에 위치한 '생과방'은 궁중의 육처소(六處所) 가운데 하나이며, '국왕과 왕비'의 후식과 별식을 준비하던 곳으로 '생물방'이라고도 불렸습니다. 경복궁 생과방 프로그램은 조선왕조실록의 내용을 토대로 실제 임금이 먹었던 궁중병과와 궁중약차를 오늘날에도 즐길 수 있도록 구성된 유료 프로그램입니다.
+                        경복궁 소주방 전각에 위치한 '생과방'은 궁중의 육처소 가운데 하나이며, '국왕과 왕비'의 후식과 별식을 준비하던 곳으로 '생물방'이라고도 불렸습니다. 경복궁 생과방 프로그램은 조선왕조실록의 내용을 토대로 실제 임금이 먹었던 궁중병과와 궁중약차를 오늘날에도 즐길 수 있도록 구성된 유료 프로그램입니다.
                     </p>
                 </div>
             </article>
@@ -246,7 +246,7 @@
             </article>
         </section>
 
-        <hr />
+        <hr>
 
         <footer>
             <div class="container">
