--- a/works/pofol02/index.html
+++ b/works/pofol02/index.html
@@ -88,7 +88,7 @@
             </div>
         </header>
 
-        <hr />
+        <hr>
 
         <section class="visual">
             <h2 class="sr-only">서울식물원 전경</h2>
@@ -125,12 +125,13 @@
 
         </section>
 
-        <hr />
+        <hr>
 
         <section class="info">
             <h2 class="sr-only">주요안내사항</h2>
 
             <article class="sub">
+                <h2 class="sr-only">서브메뉴</h2>
                 <ul>
                     <li><a rel="noopener noreferrer" href="#">전화번호안내</a></li>
                     <li><a rel="noopener noreferrer" href="#">교육신청</a></li>
@@ -202,7 +203,7 @@
             </article>
         </section>
 
-        <hr />
+        <hr>
 
         <section class="exhibit">
             <h2>전시 안내</h2>
@@ -210,45 +211,45 @@
                 <li>
                     <a rel="noopener noreferrer" href="#">
                         <p class="frame"></p>
-                        <span class="tit">박기원 작가 &lt;대화&gt; 전시</span><br />
-                        식물문화센터 프로젝트홀 2, 마곡문화관 <br />
+                        <span class="tit">박기원 작가 &lt;대화&gt; 전시</span><br>
+                        식물문화센터 프로젝트홀 2, 마곡문화관 <br>
                         <span class="date">2022.9.6 ~ 2022.12.25</span>
                     </a>
                 </li>
                 <li>
                     <a rel="noopener noreferrer" href="#">
                         <p class="frame"></p>
-                        <span class="tit">민들레 홀씨되어</span><br />
-                        식물문화센터 온실 진입로 <br />
+                        <span class="tit">민들레 홀씨되어</span><br>
+                        식물문화센터 온실 진입로 <br>
                         <span class="date">2019.5.10 ~</span>
                     </a>
                 </li>
                 <li>
                     <a rel="noopener noreferrer" href="#">
                         <p class="frame"></p>
-                        <span class="tit">서울식물원 야외 조각 전시</span><br />
-                        서울식물원 X 서울시립미술관 협력전 <br />
+                        <span class="tit">서울식물원 야외 조각 전시</span><br>
+                        서울식물원 X 서울시립미술관 협력전 <br>
                         <span class="date">2019.5.7 ~ 2023.4.30</span>
                     </a>
                 </li>
                 <li>
                     <a rel="noopener noreferrer" href="#">
                         <p class="frame"></p>
-                        <span class="tit">봄봄봄</span><br />
-                        식물문화센터 (야외 로비 진입로) <br />
+                        <span class="tit">봄봄봄</span><br>
+                        식물문화센터 (야외 로비 진입로) <br>
                         <span class="date">2019.5.10 ~</span>
                     </a>
                 </li>
             </ul>
         </section>
 
-        <hr />
+        <hr>
 
         <section class="class">
             <h2>교육프로그램</h2>
 
             <p>
-                서울식물원은 시민 삶을 풍요롭게 해 줄 다양한 식물, 식물문화 교육 프로그램을 운영 중입니다.<br />
+                서울식물원은 시민 삶을 풍요롭게 해 줄 다양한 식물, 식물문화 교육 프로그램을 운영 중입니다.<br>
                 서울시 공공예약시스템을 통해 누구나 교육 프로그램을 신청하고 참여할 수 있습니다.
             </p>
 
@@ -357,7 +358,7 @@
             <a rel="noopener noreferrer" href="#" class="pagination next">Next</a>
         </section>
 
-        <hr />
+        <hr>
 
         <section class="tour">
             <h2>투어프로그램</h2>
@@ -371,7 +372,7 @@
                         </a>
                             <h3>식물원에서 만나는 공기정화 식물</h3>
                             <p class="desc">
-                                서울식물원 온실에서 자라는 식물을 전문 해설사와 함께 만나보고,<br/><span>공기정화 식물을 심어보세요!</span>
+                                서울식물원 온실에서 자라는 식물을 전문 해설사와 함께 만나보고,<br><span>공기정화 식물을 심어보세요!</span>
                             </p>
                             <span class="date">2022.09.03 ~ 2022.09.25</span>
                     </li>
@@ -381,7 +382,7 @@
                         </a>
                             <h3>온실+주제원 해설 투어</h3>
                             <p class="desc">
-                                서울 마곡에 식물원이 생기게 된 이야기와 함께 온실 속 12개 도시의 식물,<br/><span>재미있는 식물 스토리를 들려주는 해설사와 함께 여행합니다!</span>
+                                서울 마곡에 식물원이 생기게 된 이야기와 함께 온실 속 12개 도시의 식물,<br><span>재미있는 식물 스토리를 들려주는 해설사와 함께 여행합니다!</span>
                             </p>
                             <span class="date">2022.09.03 ~ 2022.09.25</span>
                     </li>
@@ -391,7 +392,7 @@
                         </a>
                             <h3>온실+주제원 해설 투어</h3>
                             <p class="desc">
-                                서울식물원에 처음 오셨나요? 여러분이 모여 함께 오신다구요?<br/><span>전문 해설가와 함께 서울식물원에서의 추억을 만들어 보세요!</span>
+                                서울식물원에 처음 오셨나요? 여러분이 모여 함께 오신다구요?<br><span>전문 해설가와 함께 서울식물원에서의 추억을 만들어 보세요!</span>
                             </p>
                             <span class="date">2022.09.03 ~ 2022.09.25</span>
                     </li>
@@ -406,7 +407,7 @@
             </div>
         </section>
 
-        <hr />
+        <hr>
         
         <footer>
             <div class="container">
