--- a/works/pofol03/index.html
+++ b/works/pofol03/index.html
@@ -68,6 +68,7 @@
         </section>
 
         <section class="best-article">
+            <h2 class="sr-only">베스트 아티클 보기</h2>
             <ul class="article-mnu">
                 <li><a rel="noopener noreferrer" href="#">
                     <img src="./images/article-mnu1.svg" alt="#">
@@ -398,7 +399,7 @@
         </section>
 
         <footer>
-            <article class="policy">
+            <div class="policy">
                 <div class="container">
                     <div class="notice">
                         <span class="category">공지</span>
@@ -415,12 +416,12 @@
                         <li><a rel="noopener noreferrer" href="#">1:1 문의</a></li>
                     </ul>
                 </div>
-            </article>
+            </div>
 
             <article class="info">
                 <h2>중앙일보(주)</h2>
                 <address>
-                    사업자등록번호 : 110-81-00999 | 통신판매업신고 : 2020-서울마포-3802 | 개인정보책임자 : 최훈 <br />
+                    사업자등록번호 : 110-81-00999 | 통신판매업신고 : 2020-서울마포-3802 | 개인정보책임자 : 최훈 <br>
                     서울특별시 마포구 상암산로 48-6 | 대표이사 : 박장희, 홍정도
                 </address>
                 <p>fol:in의 모든 콘텐트는 저작권법의 보호를 받은바, 무단 전재, 복사·배포 등을 금합니다.</p>
