--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-  <link rel="stylesheet" href="./css/animate.css" />
+  <link rel="stylesheet" href="./css/animate.css">
   <link rel="stylesheet" href="./css/style.css">
   
   <script src="./js/jquery.min.js"></script>
@@ -52,13 +52,13 @@
       <figure class="bgmov">
         <!-- playsinline 아이폰에서는 자체 동영상 플레이어로 넘어가는 현상을 방지하는 코드 -->
         <video playsinline autoplay loop muted>
-            <source src="./images/intro.mp4" type="video/mp4" />
+            <source src="./images/intro.mp4" type="video/mp4">
         </video>
         <figcaption class="sr-only">원하는 것을 실현하는 웹퍼블리셔</figcaption>
 	  </figure>      
     </section>
 
-    <hr />
+    <hr>
 
     <header>
       <div class="container">
@@ -79,7 +79,7 @@
       </div>
     </header>
 
-    <hr />
+    <hr>
 
     <section id="aboutme">
       <h2 class="wow fadeInUp">About Me</h2>
@@ -87,11 +87,11 @@
       <div class="container">
         <div class="info">
             <p class="myself">
-            안녕하세요, 원하는 것을 실현하는 <strong>웹퍼블리셔 김은지</strong>입니다. <br /><br />
+            안녕하세요, 원하는 것을 실현하는 <strong>웹퍼블리셔 김은지</strong>입니다. <br><br>
             새로운 것을 탐험하는 것을 좋아하는 저는 트렌드가 빠르게 변하고,
             <span>새로운 기술이 끊임없이 등장하는 웹디자인 분야를 즐겁게 공부하고 있습니다.</span>
-            1px 차이로도 완성도가 다르게 느껴지는 것이 UI디자인이라 생각합니다.<br /><br />
-            작은 디테일의 차이를 아는 UX/UI 디자이너가 되고 싶습니다.<br />
+            1px 차이로도 완성도가 다르게 느껴지는 것이 UI디자인이라 생각합니다.<br><br>
+            작은 디테일의 차이를 아는 UX/UI 디자이너가 되고 싶습니다.<br>
             더 나은 UI를 위해 꾸준히 노력하는 저의 모습이 이곳에 담겨있습니다.
             </p>
                 <p class="frame"></p>
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <hr />
+    <hr>
 
     <section id="skill">
       <h2 class="wow fadeInUp">Skill</h2>
@@ -131,8 +131,8 @@
 
         <li>
             <p>
-                HTML5 & CSS3 시멘틱 페이지를 <span>ZenCoding(EMMET), SCSS로 코딩할 수 있습니다.</span><br />
-                플러그인 없이 기본적인 Javascript/jQuery/React <span>로직구현이 가능합니다.</span>
+                웹표준/웹접근성/SEO를 고려한<span> 시멘틱 마크업과 SCSS 활용이 가능합니다.</span><br>
+                플러그인 없이 기본적인<span> Javascript/jQuery/React 로직구현이 가능합니다.</span>
             </p>
         </li>
       </ol>
@@ -158,7 +158,7 @@
 
         <li>
             <p>
-                사용자가 보기 편안하되, <span>세련된 스타일을 유지하는 것이 제가 추구하는 UI입니다.</span><br />
+                사용자가 보기 편안하되, <span>세련된 스타일을 유지하는 것이 제가 추구하는 UI입니다.</span><br>
                 페이지 디자인에 필요한 섬세한 이미지 리터칭과 <span>감각적인 UI 디자인을 할 수 있습니다.</span>
             </p>
         </li>
@@ -166,7 +166,7 @@
 
     </section>
 
-    <hr />
+    <hr>
 
     <section id="ability">
       <h2 class="wow fadeInUp">Ability</h2>
@@ -238,7 +238,7 @@
     </div>
     </section>
 
-    <hr />
+    <hr>
 
     <section id="personality"> 
       <h2 class="wow fadeInUp">Personality</h2>
@@ -248,7 +248,7 @@
             <li>
                 <h3>01 #꼼꼼함</h3>
                 <p>
-                프로젝트의 완성도는 작은 디테일로 결정된다고 생각합니다. <br />
+                프로젝트의 완성도는 작은 디테일로 결정된다고 생각합니다. <br>
                 남다른 꼼꼼함으로 놓치기 쉬운 디테일까지 캐치하고
                 <span>실수가 생기지 않도록 두번 세번 검토하는 편입니다.</span>
                 </p>
@@ -265,7 +265,7 @@
             <li>
                 <h3>03 #책임감</h3>
                 <p>
-                언제나 맡은 일에 책임감을 가지고 임합니다. <br />
+                언제나 맡은 일에 책임감을 가지고 임합니다. <br>
                 제 손으로 시작한 일은 곧 저의 커리어라고 생각하기 때문에
                 <span>허투루 작업하지 않고, 마무리까지 최선을 다합니다.</span>
                 </p>
@@ -273,8 +273,8 @@
             <li>
                 <h3>04 #꾸준함</h3>
                 <p>
-                꾸준하게만 해도 성공한다라는 말이 있습니다. <br />
-                꾸준하게 하기가 그만큼 힘들다는 뜻이 아닐까 싶습니다. <br />
+                꾸준하게만 해도 성공한다라는 말이 있습니다. <br>
+                꾸준하게 하기가 그만큼 힘들다는 뜻이 아닐까 싶습니다. <br>
                 그래서 저는 이 분야에서 꾸준하게 공부하며
                 <span>한걸음 한걸음 더 나아가고자 매일 노력하고 있습니다.</span>
                 </p>
@@ -284,7 +284,7 @@
 
     </section>
 
-    <hr />
+    <hr>
 
     <section id="portfolio">  
       <h2 class="wow fadeInUp">Portfolio</h2>
@@ -307,9 +307,9 @@
                       <h3>록시땅 (반응형, 리뉴얼 디자인)</h3>
                       <p class="tip">Loccitane Renewal Design</p>
                       <p class="desc">
-                          현재 진행 중인 홀리데이 시즌 컨셉에 맞게 리뉴얼 디자인했습니다. <br />
-                          메인 비주얼 배너 이미지를 슬라이드용으로 직접 제작했으며 <br />
-                          모든 섹션에 조금씩 변화를 주어 UI 디자인을 보완했습니다. <br />                                
+                          현재 진행 중인 홀리데이 시즌 컨셉에 맞게 리뉴얼 디자인했습니다. <br>
+                          메인 비주얼 배너 이미지를 슬라이드용으로 직접 제작했으며 <br>
+                          모든 섹션에 조금씩 변화를 주어 UI 디자인을 보완했습니다. <br>                                
                       </p>
                       <p class="tools"><span>작업프로그램</span> : Photoshop, Visual Studio Code</p>
                       <p class="etc"><span>작업기여도</span> : 100% 개인 작업</p>
@@ -336,9 +336,9 @@
                       <h3>경복궁 생과방 (리뉴얼 디자인)</h3>
                       <p class="tip">Saeng Gwa Bang Renewal Design</p>
                       <p class="desc">
-                          경복궁 생과방의 이미지를 살려 리뉴얼 디자인하였습니다. <br />
-                          동적인 분위기를 더하기 위해 비주얼 슬라이드를 추가하고, <br />
-                          메인 페이지에서 전체 음료와 디저트 메뉴를 볼 수 있도록 수정했습니다. <br />                                
+                          경복궁 생과방의 이미지를 살려 리뉴얼 디자인하였습니다. <br>
+                          동적인 분위기를 더하기 위해 비주얼 슬라이드를 추가하고, <br>
+                          메인 페이지에서 전체 음료와 디저트 메뉴를 볼 수 있도록 수정했습니다. <br>                                
                       </p>
                       <p class="tools"><span>작업프로그램</span> : Photoshop, Visual Studio Code</p>
                       <p class="etc"><span>작업기여도</span> : 100% 개인 작업</p>
@@ -364,8 +364,8 @@
                       <h3>서울식물원 (리뉴얼 디자인)</h3>
                       <p class="tip">Seoul Botanic Park Renewal Design</p>
                       <p class="desc">
-                          기존 서울식물원 홈페이지 메인페이지를 리뉴얼 디자인하였습니다. <br />
-                          식물원의 분위기를 담기 위해 생동감 넘치는 이미지로 비주얼 영역을 구현했고,<br />
+                          기존 서울식물원 홈페이지 메인페이지를 리뉴얼 디자인하였습니다. <br>
+                          식물원의 분위기를 담기 위해 생동감 넘치는 이미지로 비주얼 영역을 구현했고,<br>
                           메인 페이지에서 다양한 프로그램을 볼 수 있도록 구성했습니다.
                       </p>
                       <p class="tools"><span>작업프로그램</span> : Photoshop, Visual Studio Code</p>
@@ -391,8 +391,8 @@
                       <h3>폴인</h3>
                       <p class="tip">fol:in Main Page Design</p>
                       <p class="desc">
-                          폴인 사이트의 메인페이지를 직접 구현하였습니다.<br />
-                          비주얼 영역의 무한 슬라이드를 플러그인 없이 코딩했으며<br />
+                          폴인 사이트의 메인페이지를 직접 구현하였습니다.<br>
+                          비주얼 영역의 무한 슬라이드를 플러그인 없이 코딩했으며<br>
                           세세한 스타일과 레이아웃 구성을 연구하며 재현했습니다.
                       </p>
                       <p class="tools"><span>작업프로그램</span> : Photoshop, Visual Studio Code</p>
@@ -418,8 +418,8 @@
                       <h3>코로나 예방 함께해요</h3>
                       <p class="tip">Let's prevent COVID-19 together</p>
                       <p class="desc">
-                        올바른 코로나 예방 에티켓을 학습할 수 있도록<br />
-                        유도하는 미니게임으로 게임의 컨셉을 정하는 기획부터<br />
+                        올바른 코로나 예방 에티켓을 학습할 수 있도록<br>
+                        유도하는 미니게임으로 게임의 컨셉을 정하는 기획부터<br>
                         마무리 단계까지 자체적으로 디자인·개발한 프로젝트입니다.
                       </p>
                       <p class="tools"><span>작업프로그램</span> : Photoshop, Illustrator, Visual Studio Code</p>
@@ -438,8 +438,8 @@
                       <h3>제주여기</h3>
                       <p class="tip">Jeju Here Main Page Design</p>
                       <p class="desc">
-                        관광지, 맛집, 즐길거리, 축제로 카테고리를 나누어<br />
-                        제주도 여행에 필요한 정보들을 소개하는 사이트입니다.<br />
+                        관광지, 맛집, 즐길거리, 축제로 카테고리를 나누어<br>
+                        제주도 여행에 필요한 정보들을 소개하는 사이트입니다.<br>
                         자료조사부터 코딩까지 개인 작업으로 진행했습니다.
                       </p>
                       <p class="tools"><span>작업프로그램</span> : Photoshop, Visual Studio Code</p>
@@ -457,8 +457,8 @@
                       <h3>프로필 사이트</h3>
                       <p class="tip">Personal Profile Site Design</p>
                       <p class="desc">
-                        프로필 사이트의 제작 과정을 담은 자료를 보실 수 있습니다.<br />
-                        저의 역량과 지금까지 작업한 포트폴리오를<br />
+                        프로필 사이트의 제작 과정을 담은 자료를 보실 수 있습니다.<br>
+                        저의 역량과 지금까지 작업한 포트폴리오를<br>
                         잘 전달할 수 있도록 노력해서 만든 사이트입니다.
                       </p>
                       <p class="tools"><span>작업프로그램</span> : Photoshop, Visual Studio Code</p>
@@ -478,7 +478,7 @@
           <a href="#" class="next">다음</a>
       </article>
 
-      <hr />
+      <hr>
 
       <article class="works">
           <h3 class="wow fadeInUp">디자인 포트폴리오</h3>
@@ -547,7 +547,7 @@
       </article>
     </section>
 
-    <hr />
+    <hr>
 
     <section id="vision">
       <h2 class="wow fadeInUp">Vision</h2>
@@ -555,7 +555,7 @@
       <div>
         <img src="./images/vision.png" alt="vision">
         <p>
-            조금씩 '할 수 있는 것'의 영역을 넓혀가며<br />
+            조금씩 '할 수 있는 것'의 영역을 넓혀가며<br>
             하루하루 성장하고 발전하며 나아가고 있습니다.
         </p>
         <h3>Contact</h3>
