--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <li>
             <p>
                 웹표준/웹접근성/SEO를 고려한<span> 시멘틱 마크업과 SCSS 활용이 가능합니다.</span><br>
-                플러그인 없이 기본적인<span> Javascript/jQuery/React 로직구현이 가능합니다.</span>
+                플러그인 없이 Javascript/jQuery/React<span> 로직 구현이 가능합니다.</span>
             </p>
         </li>
       </ol>
