--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                       <p class="etc"><span>작업기여도</span> : 100% 개인 작업</p>
                       <p class="btn">
                           <a rel="noopener noreferrer" href="./images/portfolio/profile.pdf" target="_blank" class="proc-pdf">작업과정</a>
-                        <a rel="noopener noreferrer" href="https://enjkm620.github.io/uiux-designer/" target="_blank">사이트보기</a>
+                        <a rel="noopener noreferrer" href="https://enjkm620.github.io/profile/" target="_blank">사이트보기</a>
                       </p>
                   </figcaption>
                   <div class="frame">
