--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     </div>
                     <p>
                         <span class="desc">Research & UX Design <span class="tip">| 팀 프로젝트 (Tving/디자인 담당)</span></span>
-                        OTT 서비스가 트렌드가 된 이유와 경쟁사 별 페르소나를 분석했습니다.
+                        OTT 서비스 경쟁사 별로 페르소나를 설정하고 UX 분석을 한 자료입니다.
                     </p>
                 </li>
                 <li>
