--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
         <li>
             <p>
-                웹표준/웹접근성/SEO를 고려한<span> 시멘틱 마크업과 SCSS 활용이 가능합니다.</span><br>
-                플러그인 없이 Javascript/jQuery/React<span> 로직 구현이 가능합니다.</span>
+                웹표준/웹접근성/SEO를 고려한<span> 시멘틱 마크업과 <strong>SCSS</strong> 활용이 가능합니다.</span><br>
+                플러그인 없이 <strong>Javascript/jQuery/React</strong><span> 로직 구현이 가능합니다.</span>
             </p>
         </li>
       </ol>
@@ -159,7 +159,7 @@
         <li>
             <p>
                 사용자가 보기 편안하되, <span>세련된 스타일을 유지하는 것이 제가 추구하는 UI입니다.</span><br>
-                페이지 디자인에 필요한 섬세한 이미지 리터칭과 <span>감각적인 UI 디자인을 할 수 있습니다.</span>
+                페이지 디자인에 필요한 섬세한 이미지 리터칭과 <span><strong>감각적인 UI 디자인</strong>을 구현합니다.</span>
             </p>
         </li>
       </ol>
