--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             새로운 것을 탐험하는 것을 좋아하는 저는 트렌드가 빠르게 변하고,
             <span>새로운 기술이 끊임없이 등장하는 웹디자인 분야를 즐겁게 공부하고 있습니다.</span>
             1px 차이로도 완성도가 다르게 느껴지는 것이 UI디자인이라 생각합니다.<br><br>
-            작은 디테일의 차이를 아는 UX/UI 디자이너가 되고 싶습니다.<br>
+            작은 디테일의 차이를 아는 UI 개발자가 되고 싶습니다.<br>
             더 나은 UI를 위해 꾸준히 노력하는 저의 모습이 이곳에 담겨있습니다.
             </p>
                 <p class="frame"></p>
@@ -271,12 +271,11 @@
                 </p>
             </li>
             <li>
-                <h3>04 #꾸준함</h3>
+                <h3>04 #끈기</h3>
                 <p>
-                꾸준하게만 해도 성공한다라는 말이 있습니다. <br>
-                꾸준하게 하기가 그만큼 힘들다는 뜻이 아닐까 싶습니다. <br>
-                그래서 저는 이 분야에서 꾸준하게 공부하며
-                <span>한걸음 한걸음 더 나아가고자 매일 노력하고 있습니다.</span>
+                개발자에게 가장 중요한 역량은 끈기라고 생각합니다. <br>
+                예상치 못한 오류에 부딪쳐도 계속 도전하며
+                <span>새롭게 알아가는 것들에 재미와 보람을 느낍니다.</span>
                 </p>
             </li>
         </ul>
