--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <p>
                 개발자에게 가장 중요한 역량은 끈기라고 생각합니다. <br>
                 예상치 못한 오류에 부딪쳐도 계속 도전하며
-                <span>새롭게 알아가는 것들에 재미와 보람을 느낍니다.</span>
+                <span>새롭게 알아가는 것들에 재미와 보람을 느끼고 있습니다.</span>
                 </p>
             </li>
         </ul>
@@ -303,7 +303,7 @@
           <div class="slides-container">
               <figure>
                   <figcaption>
-                      <h3>록시땅 (반응형, 리뉴얼 디자인)</h3>
+                      <h3>록시땅 (반응형)</h3>
                       <p class="tip">Loccitane Renewal Design</p>
                       <p class="desc">
                           현재 진행 중인 홀리데이 시즌 컨셉에 맞게 리뉴얼 디자인했습니다. <br>
@@ -327,12 +327,12 @@
                   </figcaption>
                   <div class="frame">
                       <img src="./images/portfolio/pofol-07.jpg" alt="록시땅">
-                      <img src="./images/portfolio/pofol-07-mobile.jpg" alt="록시땅 모바일" class="mobile">
+                      <img src="./images/portfolio/pofol-07-mobile.png" alt="록시땅 모바일" class="mobile">
                   </div>
               </figure>
               <figure>
                   <figcaption>
-                      <h3>경복궁 생과방 (리뉴얼 디자인)</h3>
+                      <h3>경복궁 생과방 (반응형)</h3>
                       <p class="tip">Saeng Gwa Bang Renewal Design</p>
                       <p class="desc">
                           경복궁 생과방의 이미지를 살려 리뉴얼 디자인하였습니다. <br>
@@ -356,11 +356,12 @@
                   </figcaption>
                   <div class="frame">
                       <img src="./images/portfolio/pofol-01.jpg" alt="생과방">
+                      <img src="./images/portfolio/pofol-01-mobile.png" alt="생과방 모바일" class="mobile">
                   </div>
               </figure>
               <figure>
                   <figcaption>
-                      <h3>서울식물원 (리뉴얼 디자인)</h3>
+                      <h3>서울식물원</h3>
                       <p class="tip">Seoul Botanic Park Renewal Design</p>
                       <p class="desc">
                           기존 서울식물원 홈페이지 메인페이지를 리뉴얼 디자인하였습니다. <br>
